--- a/src/pages/service/components/css/DataRoom.module.scss
+++ b/src/pages/service/components/css/DataRoom.module.scss
@@ -24,7 +24,8 @@
             flex-direction: row;
             flex-wrap: wrap;
             margin-top: 40px;
-            justify-content: space-between;
+            justify-content: flex-start;
+            column-gap: calc(80px / 3);
         }
         .top_type_wrapper{
             display: flex;
